<resources>
    <string name="app_name">Farm</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="My_Crops">My Crops</string>
    <string name="Weather">Weather</string>
    <string name="Agriculture_Library">Agri library</string>
    <string name="Nearest_Selling_point">Selling point</string>
    <string name="Fertilizers">Fertilizers</string>
    <string name="Current_Price">Current price</string>
    <string name="Full_Name">Full name</string>
    <string name="Phone_no">Phone no.</string>
    <string name="Password">Password</string>
    <string name="Create">Create</string>
    <string name="Already_have_an_account">
    Already have an account?</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Sign_in">Sign In</string>
    <string name="Log_out">Log Out</string>
    <string name="view">view</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="punjabi1">punjabis</string>
    <string name="punjabi2">punjabi</string>
    <string name="Add">Add</string>
    <string name="title_activity_current_price">currentPriceActivity</string>

</resources>
