<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="37dp"
            android:layout_marginLeft="30dp"
            android:id="@+id/linearLayout3">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">
            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Phone_no"
                android:layout_marginTop="20dp"
                android:textSize="16dp"
                android:textColorHint="#ADCCE2"
                android:textColor="#ADCCE2"
                android:layout_marginLeft="22dp"
                android:inputType="phone"
                android:background="#0000"
                android:padding="16dp"
                android:drawableRight="@drawable/user"
                android:layout_marginRight="35dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:background="#ADCCE2" />
            <EditText
                android:id="@+id/password"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:textColorHint="#ADCCE2"
                android:layout_marginLeft="22dp"
                android:inputType="textPassword"
                android:textColor="#ADCCE2"
                android:maxLength="12"
                android:background="#0000"
                android:padding="16dp"
                android:drawableRight="@drawable/pasword"
                android:layout_marginRight="35dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="#ADCCE2"/>
            <Button
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/angle"
                android:text="@string/Sign_in"
                android:textSize="16dp"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:padding="16dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="28dp"
                android:layout_marginTop="32dp"
                />
        </LinearLayout>


    </RelativeLayout>
</FrameLayout>
