<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img">

    <GridLayout
        android:id="@+id/content_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="100dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.rahul.farm.HomeActivity"
        tools:showIn="@layout/app_bar_home"
        android:background="@drawable/background"

        android:rowCount="7"
        android:columnCount="3"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="160dp"
            android:layout_height="137dp"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_marginRight="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="137dp"
            android:id="@+id/my_crop"
            android:scaleType="fitXY"
            android:background="@drawable/market"
            />

        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#7000"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp" >


        <TextView
            android:text="@string/My_Crops"
            android:id="@+id/t_mycrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:gravity="center"
            android:shadowColor="#000"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:padding="4dp"
            android:textColor="#FFF"/>
        </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="170dp"
            android:layout_height="137dp"
            android:layout_column="2"
            android:layout_row="1"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="137dp"
            android:id="@+id/weather"
            android:scaleType="fitXY"
            android:background="@drawable/fertilizer"/>

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#7000"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingTop="15dp" >
        <TextView
            android:text="@string/Weather"
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:gravity="center"
            android:shadowColor="#000"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:padding="4dp"
            android:textColor="#FFF"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="160dp"
            android:layout_height="137dp"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="10dp"
            android:background="#FFF" >

        <ImageView
            android:id="@+id/lib"
            android:layout_width="160dp"
            android:layout_height="137dp"
            android:scaleType="fitXY"
            android:src="@drawable/agri" />

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#7000"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingTop="15dp" >
        <TextView
            android:id="@+id/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:gravity="center"
            android:shadowColor="#000"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:padding="4dp"
            android:textColor="#FFF"
            android:text="Agri library"
            />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="160dp"
            android:layout_height="137dp"
            android:layout_column="2"
            android:layout_row="2"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="10dp"
            android:background="#FFF" >

        <ImageView
            android:layout_width="160dp"
            android:layout_height="137dp"
            android:id="@+id/current"
            android:scaleType="fitXY"
            android:background="@drawable/curr"/>

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#7000"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingTop="15dp" >

        <TextView
            android:text="@string/Current_Price"
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:gravity="center"
            android:shadowColor="#000"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:padding="4dp"
            android:textColor="#FFF"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="160dp"
            android:layout_height="137dp"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_marginRight="4dp"
            android:background="#FFF" >

        <ImageView
            android:layout_width="160dp"
            android:layout_height="137dp"
            android:id="@+id/selling_pt"
            android:background="@drawable/market"
            android:layout_column="0"
            android:layout_row="5"
            />

        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#7000"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp" >
        <TextView
            android:text="@string/Nearest_Selling_point"
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:gravity="center"
            android:shadowColor="#000"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:padding="4dp"
            android:textColor="#FFF"/>
        </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="160dp"
            android:layout_height="137dp"
            android:layout_column="2"
            android:layout_row="3"
            android:layout_marginLeft="4dp"
            android:background="#FFF" >

        <ImageView
            android:layout_width="160dp"
            android:layout_height="137dp"
            android:id="@+id/fertilizer"
            android:background="@drawable/fert"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#7000"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp" >

        <TextView
            android:text="@string/Fertilizers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:gravity="center"
            android:shadowColor="#000"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:padding="4dp"
            android:textColor="#FFF"/>
        </LinearLayout>
        </RelativeLayout>


    </GridLayout>
</RelativeLayout>
